--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,7 +1,35 @@
-name: Build, Test, and Deploy
-
+name: Pipeline Avancée
+ 
 on:
   push:
-    branches: "main"
-  pull_request:
-    branches: "main"
+    branches:
+      - main
+ 
+jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout du code
+        uses: actions/checkout@v2
+      - name: Installation des dépendances
+        run: npm install
+      - name: Build du code
+        run: npm run build
+      - name: Archive des résultats de tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results
+ 
+  # deploy:
+  #   needs: build-and-test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Téléchargement des résultats de tests
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: test-results
+  #     - name: Déploiement sur le serveur de production
+  #       run: |
+  #         # Script de déploiement ici
+  #         echo "Déploiement de l'application sur le serveur de production."
